--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html class="no-js" lang="ru">
 
 <head>
-
   <title>Лаба 1</title>
   <meta charset="utf-8">
-<head>
+</head>
+
 <body>
 <h1>Лаба 1</h1>
   <p>1)<a href="http://kubsu.ru/">Сайт КубГУ</a></p>
@@ -43,11 +43,11 @@
 
 <p>16) <a href="">Пустой href </a></p>
 
-<p>17) <a>Ссылка без href (обычный текст?)</a></p>
+<p>17) <a>Ссылка без href </a></p>
 
-<p>18) <a href="?????" rel="nofollow">ссылку, по которой запрещен переход поисковикам???</a></p>
+<p>18) <a href="example.com" rel="nofollow">ссылку, по которой запрещен переход поисковикам</a></p>
 
-<p>19) <a href="?????"></a>запрещенную для индексации поисковиками???</p>
+<p>19) <a href="example.com/noindex" rel="noindex"></a>запрещенную для индексации поисковиками</p>
 
 <p>20)</p>
 <ol>
@@ -86,7 +86,7 @@
   <label>
     Дата рождения:<br />
     <input name="field-birthday"
-           value="11-08-2006"
+           value="2006-11-08"
            type="date" />
   </label><br />
   Пол:<br />
