final lab 1 index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <p>8) <a href="/item?id=12345">Открыть элемент с id=12345</a></p>
 
-<p>9) <a href="index.html">Относительная (текущий каталог) — index.html</a></p>
+<p>9) <a href="index2.html">Относительная (текущий каталог) — index2.html</a></p>
 
 <p>10) <a href="about/contacts.html">Относительная (подкаталог about) — about/contacts.html</a></p>
 
